--- a/JamJelly2/requirements.txt
+++ b/JamJelly2/requirements.txt
@@ -9,6 +9,8 @@ df2gspread==1.0.4
 distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.1.7
+django-cors-headers==3.7.0
+django-heroku==0.3.1
 filelock==3.0.12
 Flask==1.1.2
 future==0.18.2
@@ -32,6 +34,8 @@ pandas==1.2.2
 path==15.1.2
 pipenv==2020.11.15
 plotly==4.14.3
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyJWT==1.7.1
